# ringmin-squared

./: AGENTS.md  AGENTS_GENERIC_TEMPLATE_v2.md  CURRENT_STATUS.md  LICENSE  PROJECT_KNOWLEDGE.md  UPSTREAM_RINGMIN.md  pyproject.toml  requirements.txt  start.md  verify.py
.github/workflows/: verification.yml
_TEMPLATES/: EVIDENCE_TEMPLATE.md  TASK_LOG_TEMPLATE.md  TASK_STATUS_TEMPLATE.md
docs/: INTERVAL_BACKEND_TRUST.md
examples/: finite_results_summary_n3_n6.json  fixed_order_result_n3.json  small_n_interval_certificate_n3.json  small_n_interval_certificate_n4.json  small_n_interval_certificate_n5.json  small_n_interval_certificate_n6.json
examples/fixed_order_batch_end_to_end/: README.md  index_orders.json
ops/TASK-20260710__batch_fixed_order_artifact_export/: EVIDENCE.md  TASK_LOG.md  TASK_STATUS.md
ops/TASK-20260710__batch_standalone_verifier_check/: EVIDENCE.md  TASK_LOG.md  TASK_STATUS.md
ops/TASK-20260710__fixed_order_artifact_cli/: EVIDENCE.md  TASK_LOG.md  TASK_STATUS.md
ops/TASK-20260710__fixed_order_artifact_exporter_loader/: EVIDENCE.md  TASK_LOG.md  TASK_STATUS.md
ops/TASK-20260710__fixed_order_artifact_schema/: EVIDENCE.md  TASK_LOG.md  TASK_STATUS.md
ops/TASK-20260710__fixed_order_batch_e2e_example/: EVIDENCE.md  TASK_LOG.md  TASK_STATUS.md
ops/TASK-20260710__fixed_order_crosschecks/: EVIDENCE.md  TASK_LOG.md  TASK_STATUS.md
ops/TASK-20260710__foundation_import/: EVIDENCE.md  TASK_LOG.md  TASK_STATUS.md
ops/TASK-20260710__independent_repository_bootstrap/: EVIDENCE.md  TASK_LOG.md  TASK_STATUS.md
ops/TASK-20260710__upstream_import_audit/: EVIDENCE.md  TASK_LOG.md  TASK_STATUS.md
ops/TASK-20260711__finite_artifact_eta_docs/: EVIDENCE.md  TASK_LOG.md  TASK_STATUS.md
ops/TASK-20260711__fixed_order_interval_bracket_exporter/: EVIDENCE.md  TASK_LOG.md  TASK_STATUS.md
ops/TASK-20260711__interval_certificate_production_hardening/: EVIDENCE.md  TASK_LOG.md  TASK_STATUS.md
ops/TASK-20260711__interval_verifier_semantics/: DESIGN.md  EVIDENCE.md  TASK_LOG.md  TASK_STATUS.md
ops/TASK-20260711__local_interval_bracket_verifier/: EVIDENCE.md  TASK_LOG.md  TASK_STATUS.md
ops/TASK-20260711__n3_global_interval_certificate_fixture/: EVIDENCE.md  TASK_LOG.md  TASK_STATUS.md
ops/TASK-20260711__n3_interval_certificate_artifact_cli/: EVIDENCE.md  TASK_LOG.md  TASK_STATUS.md
ops/TASK-20260711__n4_finite_certificate_next_step_design/: DESIGN.md  (+3 more)
research/: ALL_N_LOWER_BOUND.md  FINITE_RESULTS.md  FIXED_ORDER_ANGULAR_STN.md  FIXED_ORDER_CYCLE_RATIO.md  NEXT_RESEARCH_STEPS.md  PRODUCT_DISTANCE_SURROGATE.md
schemas/: README.md  finite_results_summary.schema.json  fixed_order_result.schema.json  small_n_interval_certificate.schema.json
tests/: test_checked_artifact_schema_validation.py  test_critical_structure.py  test_crosscheck_and_verifier.py  test_examples_fixed_order_batch_e2e.py  test_finite_results.py  test_fixed_order_artifact_batch_cli.py  test_fixed_order_artifact_cli.py  test_fixed_order_artifact_exporter_loader.py  test_fixed_order_artifact_schema.py  test_fixed_order_cycle_ratio.py  test_induced_subset_lower_bound.py  test_interval_bracket_exporter.py  test_interval_verifier.py  test_n3_arb_interval_crosscheck.py  test_product_distance.py  test_quadratic_foundation.py  test_radius_one_insertion.py  test_regular_core_upper_bound.py  test_search_small_n.py  test_small_n_interval_certificate.py  test_verify_checked_artifacts.py  test_verify_fixed_order_artifacts_cli.py  test_zigzag_core_upper_bound.py
(+421 files in other folders)
