[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "power-ringmin"
version = "0.1.0"
description = "Computational foundation for Power-Ringmin quadratic radii"
readme = "start.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Maurizio Falconi" }]
dependencies = [
  "mpmath>=1.3",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
