[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "power-ringmin"
version = "0.1.0"
description = "Computational foundation for Power-Ringmin quadratic radii"
readme = "start.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Maurizio Falconi" }]
dependencies = [
  "mpmath>=1.3",
]

[project.optional-dependencies]
crosscheck = ["numpy>=2", "scipy>=1.14"]
test = ["pytest>=8"]

[project.scripts]
power-ringmin-export-fixed-order = "power_ringmin.export_fixed_order_cli:main"
power-ringmin-export-fixed-order-batch = "power_ringmin.export_fixed_order_batch_cli:main"
power-ringmin-export-fixed-order-interval-bracket = "power_ringmin.interval_bracket_exporter:main"
power-ringmin-export-n3-interval-certificate = "power_ringmin.small_n_interval_certificate:main"
power-ringmin-export-n4-interval-certificate = "power_ringmin.small_n_interval_certificate:main_n4"
power-ringmin-verify-fixed-order-artifacts = "power_ringmin.verify_fixed_order_artifacts_cli:main"
power-ringmin-search-small-n = "power_ringmin.search_small_n:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
